--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: OnCybersec
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://oncybersec.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://oncybersec.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 remote_theme: pages-themes/hacker@v0.2.0
